--- a/loggerhead/TODO
+++ b/loggerhead/TODO
@@ -1,11 +1,28 @@
 
+=== BEFORE POSTING TO BZR.DEV ===
+* copy credits over from webserve/hgweb plugin.
+
+* in changelog view, "files modified" etc should be links
+
+* in revision view, "files modified" etc should have #-links "(jump to diff)"
+  next to them
+
+* put files/etc "buttons" links back in the page
+    inventory
+    annotate
+    atom
+
+
+=== other ===
+
 * maybe put this at the footer of each page:
     paramiko-dev, 419 revisions, 1133 days old
     first revision: Tue 2003-11-04 08:34:24 +0000
     latest revision: Sat 2006-12-02 18:33:34 -0800
     ...or somewhere.
+    ... does this really matter?
 
 * add back the search bar.
-
-* copy credits over from webserve/hgweb plugin.
+    -- should notice dotted-revnos and use that to jump.
+	-- also search by date should be simple.
 	
