figured out how to make my own separate config file like BzrInspect, and did that.

--- a/loggerhead/TODO
+++ b/loggerhead/TODO
@@ -1,4 +1,6 @@
 
+* config file
+
 * maybe put this at the footer of each page:
     paramiko-dev, 419 revisions, 1133 days old
     first revision: Tue 2003-11-04 08:34:24 +0000
