--- a/loggerhead/TODO
+++ b/loggerhead/TODO
@@ -1,6 +1,4 @@
 
-* config file
-
 * maybe put this at the footer of each page:
     paramiko-dev, 419 revisions, 1133 days old
     first revision: Tue 2003-11-04 08:34:24 +0000
@@ -16,4 +14,15 @@
   folder have changed.
     -- stumper.  maybe ask on bazaar-dev ML?
 
-	
+* two more copyrights to add, from hgweb:
+    # Copyright (C) 2005 Jake Edge <jake@edge2.net>
+    # Copyright (C) 2005 Matt Mackall <mpm@selenic.com>
+
+* list color-key at the top of the revision page, when showing the diff
+    (red = removed, etc)
+
+* use file_id for path, not actual path
+
+* side by side diff?  matty says "overflow-x" css property for horiz scrollbar
+
+* for annotation view, a link to download/view the raw file
