slowly moving the branch-specific stuff into a common structure... the changes cache is now its own class (ChangeCache) like TextIndex, and both are fields in History.  almost all of the cache rebuilding logic, etc, has been moved there and out of __init__.

--- a/loggerhead/TODO
+++ b/loggerhead/TODO
@@ -16,3 +16,12 @@
 * make a loggerhead webpage
 
 * on revision page: view/download patch
+
+* move log -> self.log
+	changelog_ui
+	revision_ui
+	inventory_ui
+	annotate_ui
+	download_ui
+	atom_ui
+	
