overhauled the collapse/expand buttons: pulled out into a separate js file, and generalized enough to support multiple sets on one page.  this now allows the revision page to contain both the unified and side-by-side diff views, with js buttons to switch between them.  gary suggested the icons for those buttons. :)

--- a/loggerhead/TODO
+++ b/loggerhead/TODO
@@ -17,5 +17,4 @@
 
 * better logging
 
-* expand/collapse buttons on diff'd files on the revision page (start with all
-  expanded)
+* button to switch between side-by-side and unified diff view
