update date too

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 What's changed in loggerhead?
 =============================
 
-1.2  [29feb2008]
+1.2  [04mar2008]
 ----------------
 
     - Michael Hudson <michael.hudson@canonical.com> has mostly taken
