--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 loggerhead (0.0.1~bzr182-1) unstable; urgency=low
 
-  * Initial release. (Closes: #XXXXXX)
+  * Initial release. (Closes: #492477)
 
  -- Jelmer Vernooij <jelmer@samba.org>  Fri, 25 Jul 2008 22:43:49 +0200
