--- a/serve-branches.1
+++ b/serve-branches.1
@@ -1,6 +1,6 @@
 .TH LOGGERHEAD "1" "August 2008" "loggerhead 1.6" "User Commands"
 .SH NAME
-loggerhead \- manual page for loggerhead 1.6
+loggerhead \- run a loggerhead server
 .SH SYNOPSIS
 .B serve-branches
 [\fIoptions\fR] \fI<path>\fR
