Add --pidfile argument to start-loggerhead.

--- a/start-loggerhead.1
+++ b/start-loggerhead.1
@@ -23,6 +23,9 @@ run in the foreground; don't daemonize
 .TP
 \fB\-C\fR, \fB\-\-check\fR
 only start if not already running (useful for cron jobs)
+.TP
+\fB\-p\fR, \fB\-\-pidfile=PIDFILE\fR
+override pid file location
 .SH "LICENSE"
 GNU GPLv2 or later.
 .SH "SEE ALSO"
