Add --configfile argument.

--- a/start-loggerhead.1
+++ b/start-loggerhead.1
@@ -26,6 +26,9 @@ only start if not already running (useful for cron jobs)
 .TP
 \fB\-p\fR, \fB\-\-pidfile=PIDFILE\fR
 override pid file location
+.TP
+\fB\-c\fR, \fB\-\-configfile=CONFIGFILE\fR
+override configuration file location
 .SH "LICENSE"
 GNU GPLv2 or later.
 .SH "SEE ALSO"
