add --log-folder option.

--- a/start-loggerhead.1
+++ b/start-loggerhead.1
@@ -27,8 +27,11 @@ only start if not already running (useful for cron jobs)
 \fB\-p\fR, \fB\-\-pidfile=PIDFILE\fR
 override pid file location
 .TP
-\fB\-c\fR, \fB\-\-configfile=CONFIGFILE\fR
+\fB\-c\fR, \fB\-\-config-file=CONFIGFILE\fR
 override configuration file location
+.TP
+\fB\-L\fR, \fB\-\-log-folder=LOG-FOLDER\fR
+override log directory
 .SH "LICENSE"
 GNU GPLv2 or later.
 .SH "SEE ALSO"
