--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ What's changed in loggerhead?
 
     - New ninja theme sponsored by Canonical (Martin Albisetti)
 
+    - Added COPYING file and clarified copyright headers (John Arbash Meinel)
+
     - Remove the .py extension requiered by the Debian Policy.
       (Jelmer Vernooij)
 
