* new apps module: "error" and ErrorHandlerApp middleware  * new error_ui controller  * added trivial template: error.pt  * serve-branches:   - added --log-folder option   - reorganized logging setup (as first step towards move it into trace.py)  * exception handling in BranchWSGIApp.app

--- a/serve-branches.1
+++ b/serve-branches.1
@@ -23,6 +23,9 @@ The directory that contains the trunk branches.
 .TP
 \fB\-\-version\fR
 Print the software version and exit
+.TP
+\fB\-\-log\-folder\fR=\fILOG_FOLDER\fR
+The directory to place log files
 .SH "LICENSE"
 GNU GPLv2 or later.
 .SH "SEE ALSO"
