--- a/serve-branches.1
+++ b/serve-branches.1
@@ -21,8 +21,17 @@ Serve user directories as ~user.
 \fB\-\-trunk\-dir\fR=\fIDIR\fR
 The directory that contains the trunk branches.
 .TP
+\fB\-\-port\fR
+Port Loggerhead should listen on (defaults to 8080).
+.TP
+\fB\-\-host\fR
+Host Loggerhead should listen on.
+.TP
+\fB\-\-prefix\fR
+Specify host prefix.
+.TP
 \fB\-\-version\fR
-Print the software version and exit
+Print the software version and exit.
 .TP
 \fB\-\-log\-folder\fR=\fILOG_FOLDER\fR
 The directory to place log files
