--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ What's changed in loggerhead?
 =============================
 
 dev [future]
+    - Switch navigation from file_ids to paths. Fixes bugs #260363, #269365
+      and #128926. (Martin Albisetti)
 
     - Fix bug #258710 ("the /files page explodes in an empty branch").
       Also minor improvements to the /files and /changes pages.
