--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ loggerhead (1.6+bzr253-1) unstable; urgency=low
   * New upstream snapshot.
   * Stop writing home directory to pid file. (Closes: #507002)
   * Use objlib from bzr. (Closes: #506999)
+  * Fix dependency on python-paste.
 
- -- Jelmer Vernooij <jelmer@samba.org>  Sun, 07 Dec 2008 16:31:02 +0100
+ -- Jelmer Vernooij <jelmer@samba.org>  Tue, 09 Dec 2008 01:04:39 +0100
 
 loggerhead (1.6+bzr245-1) unstable; urgency=low
 
