--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+loggerhead (1.10-1+systemyui) unstable; urgency=low
+
+  * Use the YUI library provided by libjs-yui.
+
+ -- Roland Mas <lolando@debian.org>  Fri, 09 Jan 2009 09:50:20 +0100
+
 loggerhead (1.10-1) unstable; urgency=low
 
   * New upstream release.
