--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 loggerhead (1.10-2) unstable; urgency=low
 
+  [ Roland Mas ]
   * Use the YUI library provided by libjs-yui.
 
- -- Roland Mas <lolando@debian.org>  Fri, 09 Jan 2009 09:50:20 +0100
+  [ Jelmer Vernooij ]
+  * Use my debian.org address in Uploaders field.
+  * Add ${misc:Depends} to please lintian.
+
+ -- Jelmer Vernooij <jelmer@debian.org>  Fri, 09 Jan 2009 22:50:03 +0100
 
 loggerhead (1.10-1) unstable; urgency=low
 
