--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,9 @@ loggerhead (1.10+bzr339-1) UNRELEASED; urgency=low
   * Suggest recent version of paste, which doesn't expose internal port
     numbers in links. (Closes: #507000)
   * New upstream snapshot.
+  * Bump standards version to 3.8.1.
 
- -- Jelmer Vernooij <jelmer@debian.org>  Tue, 05 May 2009 18:21:22 +0200
+ -- Jelmer Vernooij <jelmer@debian.org>  Tue, 05 May 2009 18:22:46 +0200
 
 loggerhead (1.10-1) unstable; urgency=low
 
