--- a/NEWS
+++ b/NEWS
@@ -134,6 +134,9 @@ dev [future]
     - Support serving branches over HTTP using the smart server protocol. 
       (Jelmer Vernooij, #306853)
 
+    - Add a <meta> generator tag and display Loggerhead's version at the
+      bottom of the page. (Matt Nordhoff, #370155)
+
 1.10 [22Dec2008]
 ---------------
 
