--- a/NEWS
+++ b/NEWS
@@ -131,8 +131,20 @@ dev [future]
 
     - Make sure the Atom feeds (nearly) validate. (Matt Nordhoff, #247162)
 
-    - Support serving branches over HTTP using the smart server protocol. 
+    - Support serving branches over HTTP using the smart server protocol.
       (Jelmer Vernooij, #306853)
+
+    - Serving branch data was broken when --allow-writes was *not*
+      passed. (Michael Hudson, #388730)
+
+    - http_serve config values are interpreted more forgivingly.
+      (Michael Hudson)
+
+    - When specifying a remote url to serve-branches, do not share
+      connections between threads. (Michael Hudson, #390972)
+
+    - http_serve values from locations.conf are now applied to
+      non-branch .bzr data (e.g shared repositories). (Michael Hudson)
 
 1.10 [22Dec2008]
 ---------------
