Mention bug #348308 in NEWS.

--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,8 @@ What's changed in loggerhead?
 dev [future]
 ------------
 
-    - Fix .bzr/smart access to branches in shared repos. (Andrew Bennetts)
+    - Fix .bzr/smart access to branches in shared repos. (You also need
+      a version of bzr with bug #348308 fixed.) (Andrew Bennetts)
 
 
 1.17 [20Aug2009]
