--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,15 @@
-loggerhead (1.17+bzr400-1) unstable; urgency=low
-
-  * New upstream snapshot.
-
- -- Jelmer Vernooij <jelmer@debian.org>  Mon, 18 Jan 2010 18:33:40 +1300
-
-loggerhead (1.17-2) UNRELEASED; urgency=low
+loggerhead (1.17+bzr400-2) UNRELEASED; urgency=low
 
   * Use source format version 3.
   * Bump standards version to 3.8.4
 
  -- Jelmer Vernooij <jelmer@debian.org>  Mon, 08 Feb 2010 01:17:39 +0100
+
+loggerhead (1.17+bzr400-1) unstable; urgency=low
+
+  * New upstream snapshot.
+
+ -- Jelmer Vernooij <jelmer@debian.org>  Mon, 18 Jan 2010 18:33:40 +1300
 
 loggerhead (1.17-1) unstable; urgency=low
   
