--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,9 @@ dev [future]
 
     - Support FastCGI, SCGI and AJP using flup. (Denis Martinez)
 
+    - Repository.get_revision_inventory() was removed in bzr 2.2; use
+      Repository.get_inventory() instead. (Matt Nordhoff, #528194)
+
 1.17 [20Aug2009]
 ---------------
 
