Credit Stuart in NEWS as well

--- a/NEWS
+++ b/NEWS
@@ -22,7 +22,7 @@ dev [future]
       local location. (Reported by Tres Seaver.) (Matt Nordhoff)
 
     - Add a script and documentation for running under mod_wsgi.
-      (Toshio Kuratomi)
+      (Stuart Colville, Toshio Kuratomi)
 
 1.17 [20Aug2009]
 ----------------
